--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "react-twitter-auth-light": "^0.2.0",
     "web-vitals": "^1.0.1"
   },
