--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "crypto-random-string": "^4.0.0",
     "ipfs-http-client": "^50.0.0",
+    "jstoxml": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
