--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "crypto-random-string": "^4.0.0",
+    "formik": "^2.2.8",
     "ipfs-http-client": "^50.0.0",
     "jstoxml": "^2.0.5",
     "react": "^17.0.2",
