--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "crypto-random-string": "^4.0.0",
     "formik": "^2.2.8",
     "ipfs-http-client": "^50.0.0",
