--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@polkadot/api": "^4.5.1",
     "@polkadot/extension-dapp": "^0.37.2",
     "@polkadot/ui-keyring": "^0.75.1",
