--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
+    "react-loading-overlay": "^1.0.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "react-twitter-auth-light": "^0.2.0",
-    "web-vitals": "^1.0.1",
-    "react-loading-overlay": "^1.0.1"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
