--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@polkadot/extension-dapp": "^0.37.2",
     "@polkadot/ui-keyring": "^0.75.1",
     "@polkadot/ui-settings": "^0.75.1",
+    "@polkadot/util": "^6.2.1",
+    "@polkadot/util-crypto": "^6.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "crypto-random-string": "^4.0.0",
     "formik": "^2.2.8",
-    "ipfs-http-client": "^50.0.0",
     "jstoxml": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,11 +24,9 @@
     "react-loading-overlay": "^1.0.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
-    "react-twitter-auth-light": "^0.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -58,9 +56,5 @@
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
     "webpack": "4.44.2"
-  },
-  "resolutions": {
-    "@polkadot/util-crypto": "^6.2.1",
-    "@polkadot/util": "^6.2.1"
   }
 }
