--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "async-series": "0.0.1",
     "axios": "^0.21.1",
     "formik": "^2.2.8",
     "jstoxml": "^2.0.5",
