--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@testing-library/user-event": "^12.1.10",
     "async-series": "0.0.1",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "formik": "^2.2.8",
     "jstoxml": "^2.0.5",
-    "lodash.isequal": "^4.5.0",
     "lodash.isempty": "^4.4.0",
+    "lodash.isequal": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
@@ -28,6 +29,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "react-virtualized": "^9.22.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
