--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jstoxml": "^2.0.5",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "papaparse": "^5.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
