--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-loading-overlay": "^1.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "react-virtualized": "^9.22.3",
